# first-tree

./: .dockerignore  .env.example  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  AGENT.md  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  Dockerfile.client  FIRST_TREE.md  MIGRATION.md  NODE.md  README.md  README_zh-CN.md  SECURITY.md  SUPPORT.md  TEST-DRAFT-PR-DO-NOT-MERGE.md  WHITEPAPER.md  about.md  biome.json  docker-compose.production.yml  docker-compose.yml  infrastructure.md  node.md  ownership-and-naming.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  practices.md  principles.md  pyproject.toml  railway.json  render.yaml  run_client.sh  run_onboard.sh  (+9 more)
.claude/: settings.json
.context-tree/: generate-codeowners.ts  generate_codeowners.py  principles.md  run-review.ts  run_review.py  validate_members.py  validate_nodes.py
.first-tree/: source.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.obsidian/: community-plugins.json
.scripts/: generate_codeowners.py  run_review.py  validate_nodes.py
_legacy_first_tree/: README.md  pnpm-lock.yaml
agent-hub/: NODE.md  adapter.md  claim-agent.md  cli.md  client-runtime.md  context-tree-sync.md  deployment.md  messaging.md  web-console.md
agents/: openai.yaml
client/: pyproject.toml
context-tree/: NODE.md
context_tree_cli/: __init__.py  __main__.py  init.py  repo.py  upgrade.py  verify.py
deploy/: Caddyfile  docker-compose.caddy.yml
doc/: agent-hub-overview.md  agent-hub-server-detailed-design.md
docs/: agent-naming-design.md  agent-skill-distribution-playbook.md  agent-skill-distribution-playbook.zh-CN.md  agent-space-and-mention-visibility-design.zh-CN.md  architecture.md  chat-first-workspace-product-design.md  chat-first-workspace-product-design.zh-CN.md  claim-agent-guide.md  cli-reference.md  cli-restructure-migration.md  context-tab-impact-design.zh-CN.md  context-tab-implementation-plan.zh-CN.md  context-tab-product-design-v2.zh-CN.md  context-tab-product-design.zh-CN.md  decouple-client-from-identity-design-zh.md  decouple-client-from-org-design-zh.md  decouple-client-from-org-design.md  deployment-guide.md  droid-review-smoke-test.md  github-app-as-built-design.md  github-app-as-built-design.zh-CN.md  github-app-design-zh.md  github-app-slim-refactor-zh.md  github-entity-chat-binding-design.md  http-path-conventions.md  local-dev-isolation.md  maintainer-architecture.md  maintainer-build-and-distribution.md  maintainer-testing.md  maintainer-thin-cli.md  message-text-attachments-design.md  multi-tenancy-hardening-design.md  new-user-onboarding-design-zh.md  new-user-onboarding-design.md  observability.md  onboarding-flow-audit.zh-CN.md  onboarding-guide.md  onboarding-redesign-zh.md  onboarding-redesign.md  onboarding.md  (+13 more)
drafts/: resources-typed-editors.md
server/: pyproject.toml
(+1110 files in other folders)
