[project]
name = "agent-hub"
version = "0.1.0"
description = "Agent Team Platform"
requires-python = ">=3.11"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "pyright>=1.1",
]

[tool.uv.workspace]
members = ["server", "client"]

# ── ruff ─────────────────────────────────────────────────────────────────────

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["server/src", "client/src"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
]

[tool.ruff.lint.isort]
known-first-party = ["agent_hub_server", "agent_hub_client"]

# ── pyright ───────────────────────────────────────────────────────────────────

[tool.pyright]
include = ["server/src", "client/src"]
venvPath = "."
venv = ".venv"
pythonVersion = "3.11"
typeCheckingMode = "standard"
reportMissingImports = true
reportMissingTypeStubs = false

# ── pytest ───────────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["server/tests", "client/tests"]
