[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "context-tree"
version = "0.1.0"
description = "CLI tools for Context Tree — the living source of truth for your organization."
readme = "docs/about.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
dependencies = []

[project.scripts]
context-tree = "context_tree_cli.__main__:main"

[tool.setuptools.packages.find]
include = ["context_tree_cli*"]

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
