[project]
name = "agent-hub-server"
version = "0.1.0"
description = "Agent Hub Platform Server"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.34,<1.0",
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "psycopg[binary]>=3.2,<4.0",
    "alembic>=1.14,<2.0",
    "pydantic>=2.0,<3.0",
    "bcrypt>=4.0,<5.0",
    "pyjwt>=2.9,<3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_hub_server"]
